3rd Intermediate Commit have corrected issues with Text Alignment and Coloring in Partial Pages

--- a/CSS/Mandir.css
+++ b/CSS/Mandir.css
@@ -82,14 +82,20 @@ button
   opacity:1;
 }
 
-.h1
+h1
 {
   text-align: center;
   color:red;
 }
 
-.h2
+h2
 {
   text-align: center;
-   color:pink; 
+   color:green; 
+}
+
+#cardtype
+{
+   align-items:center;
+
 }
